# p-olivia

./: README.md
Olivia/: CMakeLists.txt
Olivia/Olivia/: CMakeLists.txt  Olivia.cpp  Olivia.h  test.txt
Olivia/Olivia/Brain/Frontal/: Brain.h
Olivia/Olivia/Brain/Frontal/Knowledge/: Knowledge.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/: Implication.h  ImplicationEvaluator.h  ImplicationHandler.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/Disjunction/: Disjunction.h  DisjunctionEvaluator.h  DisjunctionHandler.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/Disjunction/Conjunction/: Conjunction.h  ConjunctionEvaluator.h  ConjunctionHandler.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/Disjunction/Conjunction/Clause/: Clause.h  ClauseEvaluator.h  ClauseHandler.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/Disjunction/Conjunction/Clause/Literal/: Literal.h  LiteralEvaluator.h  LiteralHandler.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/Disjunction/Conjunction/Clause/Literal/Description/: Description.h
Olivia/Olivia/Brain/Frontal/Knowledge/Implication/Disjunction/Conjunction/Clause/Literal/Probability/: Probability.h
Olivia/Olivia/Data/: Database.h
Olivia/Olivia/Menu/: Menu.h
Olivia/Olivia/Utility/: Log.h
